Fixed button spacing for two rows of admin buttons.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -365,13 +365,17 @@ a:active .shadow {
 	width: intrinsic;
 	position: relative;
 	z-index: 1000;
-	line-height: 2.5em;
 	// margin: 20px inherit 20px inherit;
 }
 
 .edit-article-buttons {
 	.edit-issue-buttons;
 	margin-left: 10px;
+}
+
+.edit-issue-buttons hr {
+	margin: 10px 0px;
+	border: none;
 }
 
 .form-actions {
